# compile-time-javascript

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  NOTICE  README.md  cthtml.cppm  ctjs.cppm
.github/workflows/: tests.yml
examples/: CMakeLists.txt  Makefile  README.md  config.cpp  hello.cpp  host.cpp  introspection.cpp  iteration.cpp  page.cpp  wellformed.cpp
experiments/: parse_by_value.cpp
include/: cthtml.hpp  ctjs.hpp
include/cthtml/: bind.hpp  grammar.hpp  serialize.hpp  types.hpp  views.hpp
include/ctjs/: asi.hpp  ast.hpp  builtins.hpp  cfunction.hpp  fold.hpp  gc.hpp  grammar.hpp  interp.hpp  lower.hpp  rc.hpp  script.hpp  value.hpp  vinterp.hpp  vparse.hpp
packaging/: prepend-license.cmake
single-header/: cthtml.hpp  ctjs.hpp
tests/: CMakeLists.txt  cxx17.cpp  document.cpp  parse  parse.cpp  runtime  runtime.cpp  v8diff  v8diff.corpus.js  v8diff.cpp  vinterp.cpp  vparse.cpp
tools/: gen-v8diff.py  node-parity.js
