file(GLOB example-sources CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

foreach(source ${example-sources})
  get_filename_component(example "${source}" NAME_WE)
  add_executable(ctjs-example-${example} "${source}")
  target_link_libraries(ctjs-example-${example} PRIVATE ctjs::ctjs)
  if(TARGET ctjs-pch-anchor)
    target_precompile_headers(ctjs-example-${example} REUSE_FROM ctjs-pch-anchor)
  endif()
  add_test(NAME example-${example} COMMAND ctjs-example-${example})
endforeach()
